--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 5000
 MONGO_URL = mongodb+srv://lithinho:lithinho@cluster0.pqlzx.mongodb.net/youtube
+
+TOKEN_SECRET = JULITHINHO,
+NODE_ENV=production
+
