chaves e número da porta

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 PORT = 5000
 MONGO_URL = mongodb+srv://lithinho:lithinho@cluster0.pqlzx.mongodb.net/youtube
 
-TOKEN_SECRET = JULITHINHO,
+TOKEN_SECRET = JULITHINHO
 NODE_ENV=production
+
+CLOUD_NAME=lithinho
+CLOUD_API_KEY=387638972122653
+CLOUD_API_SECRET=TE7GyFsqkTOPvtVuSu68PkVLoAI
 
